--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-images": "^1.2.0-beta.7",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2",
+    "react-scripts": "^3.4.2",
     "styled-components": "^5.1.1",
     "styled-components-carousel": "^0.2.0",
     "yarn": "^1.22.17"
